--- a/front-end/src/app/pages/personalform/personalform.component.html
+++ b/front-end/src/app/pages/personalform/personalform.component.html
@@ -12,6 +12,17 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <mat-form-field class="full-width" appearance="fill">
+                    <mat-label>Rut</mat-label>
+                    <input matInput [(ngModel)]="client.rutClient" name="rutClient" placeholder="Rut" validateRut formatRut required>
+                    <mat-error>
+                        Por favor ingrese un rut valido
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <mat-form-field class="full-width" appearance="fill">
                     <mat-label>Nombre</mat-label>
                     <input matInput [(ngModel)]="client.name" name="name" placeholder="Nombre" required>
                 </mat-form-field>
@@ -55,7 +66,10 @@
             <div class="form-group col-md-6">
                 <mat-form-field class="full-width" appearance="fill">
                     <mat-label>Rut empresa</mat-label>
-                    <input matInput [(ngModel)]="client.companyRut" name="companyRut" placeholder="Rut Empresa" required>
+                    <input matInput [(ngModel)]="client.companyRut" name="companyRut" placeholder="Rut Empresa" validateRut formatRut required>
+                    <mat-error>
+                        Por favor ingrese un rut valido
+                    </mat-error>
                 </mat-form-field>
             </div>
         </div>
