Modificación de ortografia y actualizacion de imagenes

--- a/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.html
+++ b/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group mat-align-tabs="center" #tabGroup>
     <mat-tab>
         <ng-template mat-tab-label>
-            <img src="../../../assets/img/BciPagos.png" class="card-img-top" alt="Card Image">
+            <img src="../../../assets/img/4.jpg" class="card-img-top" alt="Card Image">
             <!-- <span style="text-align: center;">Bci Pagos con tasa preferencial</span> -->
         </ng-template>
         <div class="container-tab">
@@ -10,7 +10,7 @@
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
-            <img src="../../../assets/img/online.jpg" class="card-img-top" alt="Card Image">
+            <img src="../../../assets/img/1.jpg" class="card-img-top" alt="Card Image">
             <!-- <span>Cuenta corriente para tu empresa Gratis</span> -->
         </ng-template>
         <div class="container-tab">
@@ -24,7 +24,7 @@
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
-            <img src="../../../assets/img/Cuenta corriente gratis.jpg" class="card-img-top" alt="Card Image">
+            <img src="../../../assets/img/2.jpg" class="card-img-top" alt="Card Image">
             <!-- <span>Activación 100% digital</span> -->
         </ng-template>
         <div class="container-tab">
@@ -39,7 +39,7 @@
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
-            <img src="../../../assets/img/Seguroauto.png" class="card-img-top" alt="">
+            <img src="../../../assets/img/5.jpg" class="card-img-top" alt="">
             <!-- <span>Cuota gratis en tu seguro automotriz Bci</span> -->
         </ng-template>
         <div class="container-tab">
