--- a/front-end/src/app/modals/poll/poll.component.html
+++ b/front-end/src/app/modals/poll/poll.component.html
@@ -12,10 +12,10 @@
         <fa-icon class="fa color-file" [icon]="faFile"></fa-icon>
         <!-- <i class="fa fa-file-text-o fa-4x mb-3 animated rotateIn"></i> -->
         <p>
-            <strong>Tu opinion nos importa</strong>
+            <strong>Tu opinión nos importa</strong>
         </p>
-        <p>Tienes algunas ideas de mejorar nuestro producto?
-            <strong>Danos tu opinion.</strong>
+        <p>¿Tienes algunas ideas de mejorar nuestro producto?
+            <strong>Danos tu opinión.</strong>
         </p>
     </div>
 
@@ -32,11 +32,11 @@
     </div>
 
     <p class="text-center">
-        <strong>¿Que te gustaria mejorar?</strong>
+        <strong>¿Qué te gustaría mejorar?</strong>
     </p>
     <div class="md-form">
         <textarea type="text" class="md-textarea form-control" rows="3" [(ngModel)]="opinion" name="opinion"></textarea>
-        <label for="form79textarea">Tu opinion nos importa</label>
+        <label for="form79textarea">Tu opinión nos importa</label>
     </div>
 
 </div>
