--- a/front-end/src/app/pages/companyform/companyform.component.html
+++ b/front-end/src/app/pages/companyform/companyform.component.html
@@ -9,7 +9,7 @@
 
 <div class="bd-example">
     <form (ngSubmit)="guardar( f )" #f="ngForm">
-        <h3 class="card-title"><strong>Indicanos donde esta situada tu empresa</strong></h3>
+        <h3 class="card-title"><strong>Indícanos donde está situada tu empresa</strong></h3>
 
         <div class="form-row">
             <mat-form-field appearance="fill" style="margin-right: 5px;">
