--- a/front-end/src/app/pages/confim/confim.component.html
+++ b/front-end/src/app/pages/confim/confim.component.html
@@ -43,7 +43,7 @@
         <div class="col-md-6">
             <div id="cardTitle" class="card-body rounded shadow">
                 <h5 class="card-title">Hola [Nombre],</h5>
-                <p class="card-text">Si tienes mas dudas o preguntas, puedes contactarte con un o ouna ejecutiva, pincha <b>aquí</b>.</p>
+                <p class="card-text">Si tienes más dudas o preguntas, puedes contactarte con un o una ejecutiva, pincha <b>aquí</b>.</p>
             </div>
         </div>
     </div>
