--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
                 <mat-icon class="dot">attach_money</mat-icon>
             </div>
             <div class="card-body">
-                <h3 class="card-title"><strong>Pago de nominas en línea</strong></h3>
+                <h3 class="card-title"><strong>Pago de nóminas en línea</strong></h3>
                 <p class="card-text">Paga las remuneraciones directamente desde tu ERP Defontana!</p>
             </div>
         </div>
