--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-md-10">
                         <div id="cardTitle" class="card-body rounded shadow">
-                            <h5 class="card-title">Hola [Nombre],</h5>
+                            <h5 class="card-title">Hola,</h5>
                             <p class="card-text">Te invitamos a conocer la nueva funcionalidad de Banca Digital Bci, exclusivo para clientes Defontana.</p>
                         </div>
                     </div>
