--- a/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.css
+++ b/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.css
@@ -62,3 +62,33 @@
     -moz-box-shadow: 0 2px 8px rgba(55, 71, 79, .2);
     -webkit-box-shadow: 0 2px 8px rgba(55, 71, 79, .2);
 }
+
+.text-justified {
+    text-align: justify;
+}
+
+.underlined {
+    text-decoration: underline;
+}
+
+.h1 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #2A3F6E;
+}
+
+.h2 {
+    font-size: 18px;
+    color: #666666;
+}
+
+.h3 {
+    font-size: 16px;
+    color: #666666;
+}
+
+.textP {
+    font-family: "SSP" !important;
+    font-size: 18px !important;
+    color: #666666 !important;
+}
