--- a/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.html
+++ b/front-end/src/app/components/tab-group-stretched/tab-group-stretched.component.html
@@ -1,27 +1,5 @@
 <mat-tab-group mat-align-tabs="center" #tabGroup>
-    <mat-tab>
-        <ng-template mat-tab-label>
-            <img src="../../../assets/img/4.jpg" class="card-img-top" alt="Card Image">
-            <!-- <span style="text-align: center;">Bci Pagos con tasa preferencial</span> -->
-        </ng-template>
-        <div class="container-tab">
-            <img src="../../../assets/img/BciOagos.png" class="card-img-top" alt="Card Image">
-        </div>
-    </mat-tab>
-    <mat-tab>
-        <ng-template mat-tab-label>
-            <img src="../../../assets/img/1.jpg" class="card-img-top" alt="Card Image">
-            <!-- <span>Cuenta corriente para tu empresa Gratis</span> -->
-        </ng-template>
-        <div class="container-tab">
-            <div class="row">
-                <div class="col align-self-center text-center text-digital-activation">
-                    <h2 class="circles-heading-center text-center h2 h2-lg color-blue-normal">Activa en línea</h2>
-                    <h2 class="circles-heading-center text-center h2 h2-lg">¡Activa en línea tu cuenta con Banco Bci y vive la experiencia de tener los productos y servicios del Banco en Bci!</h2>
-                </div>
-            </div>
-        </div>
-    </mat-tab>
+    <!--Valor empresarial-->
     <mat-tab>
         <ng-template mat-tab-label>
             <img src="../../../assets/img/2.jpg" class="card-img-top" alt="Card Image">
@@ -30,9 +8,122 @@
         <div class="container-tab">
             <div class="row">
                 <div class="col align-self-center text-center text-digital-activation">
-                    <h2 class="circles-heading-center text-center h2 h2-lg color-blue-normal">Tu plan con Bci Pagos</h2>
-                    <h2 class="circles-heading-center text-center h2 h2-lg">Al contratar tu plan con Bci Pagos puedes optar por la cuenta corriente empresarios</h2>
-                    <h2 class="display-3 display-3-lg font-weight-bold mt-n2" style="color:#BBC5CA;">100% gratis.</h2>
+                    <h1 class="circles-heading-center text-center h1">Contrata tu plan de cuenta corriente Empresarios y accede a beneficios únicos para tu empresa:</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon1.png" alt="Icon 1">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Ejecutivo único y especializado para asesorar integralmente tus necesidades y las de tu empresa.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon2.png" class="card-img-top" alt="Icon 2">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Plan de cuenta corriente con 3 meses de gratuidad en la mantención.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon3.png" class="card-img-top" alt="Icon 3">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Crédito comercial 100% en línea con abono inmediato en cuenta corriente.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon4.png" class="card-img-top" alt="Icon 4">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Acceso 24/ a las plataformas digitales, a través del sitio web y app Empresarios.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon5.png" class="card-img-top" alt="Icon 5">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Asesoría integral en la configuración de negocios de Factoring, Leasing, Seguros y Comercio Exterior.</h2>
+                </div>
+            </div>
+        </div>
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <img src="../../../assets/img/4.jpg" class="card-img-top" alt="Card Image">
+            <!-- <span style="text-align: center;">Bci Pagos con tasa preferencial</span> -->
+        </ng-template>
+
+        <div class="container-tab">
+            <div class="row">
+                <div class="col align-self-center text-center text-digital-activation">
+                    <h1 class="circles-heading-center text-center h1">Te presentamos Bci Pagos, una nueva red de pagos que hará crecer tu negocio:</h1>
+                </div>
+            </div>
+            <div class="row">
+                <img src="../../../assets/img/BciPagos1.png" class="card-img-top" alt="Card Image">
+            </div>
+            <div class="row">
+                <img src="../../../assets/img/BciPagos2.png" class="card-img-top" alt="Card Image">
+            </div>
+        </div>
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <img src="../../../assets/img/1.png" class="card-img-top" alt="Card Image">
+            <!-- <span>Cuenta corriente para tu empresa Gratis</span> -->
+        </ng-template>
+        <div class="container-tab">
+            <div class="row">
+                <div class="col align-self-center text-center text-digital-activation">
+                    <h1 class="circles-heading-center text-center h1">Todo el apoyo complementario que necesitas para tu negocio en un solo lugar</h1>
+                    <h2 class="circles-heading-center h2 text-justified">Te presentamos Valor Pyme, un punto de encuentro para desarrollar e impulsar a todas las pymes de Chile, donde tendrán acceso al mejor conocimiento, herramientas innovadoras, capacitación constante, y redes para hacer negocio.</h2>
+                    <h3 class="circles-heading-center h3 text-justified underlined">Conoce algunas novedades:</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon6.png" class="card-img-top" alt="Icon 6">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Si tu cliente objetivo son empresas, te invitamos a conocer ETM meet, una El plataforma gratuita en la que podrás conectar y hacer negocios con gerentes de grandes empresas. Conoce más <a href="https://www.valorpyme.cl/etm-meet?hsLang=es"
+                            class="underlined" target="_blank">Aquí</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon7.png" class="card-img-top" alt="Icon 7">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">Si tu cliente objetivo son personas, conoce nuestro marketplace TiendaBci y accede a una tarifa especial. Conoce más <a href="https://www.valorpyme.cl/tiendabci?hsLang=es" class="underlined" target="_blank">Aquí</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon4.png" class="card-img-top" alt="Icon 4">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">¿Te gustaría aprender más de digitalización, gestión de empresas o temas financieros? Te invitamos a ver los cursos gratuitos que pueden ayudar a tu empresa. Ver <a href="https://www.valorpyme.cl/descarga-cursos-valor-pyme?hsLang=es"
+                            class="underlined" target="_blank">Aquí</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <img src="../../../assets/img/Icon8.png" class="card-img-top" alt="Icon 8">
+                </div>
+                <div class="col-11">
+                    <h2 class="text-start align-middle h2">¿Tu empresa necesita asesoría legal? Protege tu negocio con MisAbogados y su plan para Pymes, desde 1 UF mensual. Simplifica el mundo legal para tu empresa y mantenla 100% segura. Ingresa desde Valor Pyme y ¡Disfruta del primer mes
+                        gratis! Ver <a href="https://www.valorpyme.cl/descarga-partner-misabogados?hsLang=es" class="underlined" target="_blank">Aquí</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-center">Conoce esto y más en <a href="https://www.valorpyme.cl" target="_blank" class="underlined">www.valorpyme.cl</a></h2>
                 </div>
             </div>
         </div>
@@ -45,66 +136,66 @@
         <div class="container-tab">
             <div class="row">
                 <div class="col align-self-center text-center text-digital-activation">
-                    <h2 class="circles-heading-center text-center h2 h2-lg color-blue-normal">Tenemos un beneficio exclusivo para ti.</h2>
-                    <h2 class="circles-heading-center text-center h2 h2-lg">Los nuevos clientes de la Banca Digital que contraten su Seguro Automotriz particular o comercial de Bci Seguros con Bci Corredores de Seguros, se llevan:</h2>
+                    <h1 class="circles-heading-center text-center">Tenemos un beneficio exclusivo para ti.</h1>
+                    <h2 class="circles-heading-center text-center">Los nuevos clientes de la Banca Digital que contraten su Seguro Automotriz particular o comercial de Bci Seguros con Bci Corredores de Seguros, se llevan:</h2>
 
                     <div class="row">
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Beneficios las 24 horas del día, los 365 días del año</p>
+                                <p class="mb-0 textP">Beneficios las 24 horas del día, los 365 días del año</p>
                             </div>
                         </div>
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Coberturas por daños materiales y daños a terceros</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-6 order-1">
-                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Coberturas por daños materiales y daños a terceros</p>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-6 order-1">
-                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Indemnización 0 km</p>
+                                <p class="mb-0 textP">Coberturas por daños materiales y daños a terceros</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Taller de marca</p>
+                                <p class="mb-0 textP">Coberturas por daños materiales y daños a terceros</p>
                             </div>
                         </div>
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Vehículo de reemplazo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-6 order-1">
-                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Servicio de grúa</p>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-6 order-1">
-                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Taxi S.O.S.</p>
+                                <p class="mb-0 textP">Indemnización 0 km</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Chofer de reemplazo</p>
+                                <p class="mb-0 textP">Taller de marca</p>
                             </div>
                         </div>
                         <div class="col-6 col-md-6 order-1">
                             <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
-                                <p class="mb-0">Y mucho más</p>
+                                <p class="mb-0 textP">Vehículo de reemplazo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-md-6 order-1">
+                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
+                                <p class="mb-0 textP">Servicio de grúa</p>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-6 order-1">
+                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
+                                <p class="mb-0 textP">Taxi S.O.S.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-md-6 order-1">
+                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
+                                <p class="mb-0 textP">Chofer de reemplazo</p>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-6 order-1">
+                            <div class="rounded-md shadow-normal-hover p-3 d-flex justify-content-md-start align-items-center h-110 mb-4">
+                                <p class="mb-0 textP">Y mucho más</p>
                             </div>
                         </div>
                     </div>
