--- a/front-end/src/app/pages/home/home.component.css
+++ b/front-end/src/app/pages/home/home.component.css
@@ -8,7 +8,6 @@
     transform: scaleX(-1);
     filter: FlipH;
     -ms-filter: "FlipH";
-    width: 40%;
     max-height: 100px;
     height: auto;
     padding-top: 1em;
@@ -19,7 +18,7 @@
 }
 
 #cardTitle {
-    background-color: rgb(212, 223, 241);
+    background-color: rgb(236, 241, 248);
 }
 
 .dot {
@@ -42,6 +41,8 @@
 
 .btn-solutions {
     background-color: rgb(248, 120, 73);
+    font-size: medium;
+    font-weight: bold;
 }
 
 a:hover {
@@ -51,4 +52,30 @@ a:hover {
 .cardsFrame {
     margin-left: 5%;
     margin-right: 5%;
+}
+
+.titleBox {
+    font-size: medium;
+    color: #2A3F6E !important;
+    font-family: "SSP" !important;
+}
+
+.bodyBox {
+    font-size: medium;
+    color: rgb(0, 0, 129);
+    color: #2A3F6E !important;
+}
+
+.cardTitle {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "SSP" !important;
+    color: #2A3F6E;
+    margin: 0;
+}
+
+.cardBody {
+    font-size: 18px;
+    font-family: "SSP" !important;
+    color: #666666;
 }
