--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -6,21 +6,21 @@
 <div class="justify-content-between cardsFrame">
     <div class="container mb-4">
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-9">
                 <div class="row">
-                    <div class="col-md-2">
+                    <div class="col-md-1">
                         <img class="monologo" src="https://cdn3.bci.cl/uploads/e7a73864-6c61-4860-b4f9-1c92aef2082d/original/monologo-rojo-2d.png" alt="Monologo">
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-11">
                         <div id="cardTitle" class="card-body rounded shadow">
-                            <h5 class="card-title">Hola,</h5>
-                            <p class="card-text">Te invitamos a conocer la nueva funcionalidad de Banca Digital Bci, exclusivo para clientes Defontana.</p>
+                            <h5 class="card-title titleBox">Hola,</h5>
+                            <p class="card-text bodyBox">Te invitamos a conocer la nueva funcionalidad de Banca Digital Bci, exclusivo para clientes Defontana.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
-                <a href="#" class="btn btn-primary btn-solutions border-0" routerLink="/personal">Solicitar activación Banca Digital BCI</a>
+            <div class="col-md-3 text-end">
+                <a href="#" class="btn btn-primary btn-solutions border-0" routerLink="/personal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Solicitar&nbsp;activación&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br> Banca Digital BCI</a>
             </div>
         </div>
     </div>
@@ -29,34 +29,34 @@
 <div class="row row-cols-1 row-cols-md-3 g-4 cardsFrame">
     <div class="col">
         <div class="p-2 card h-100 text-center">
-            <div class="card-header">
+            <div>
                 <mat-icon class="dot">attach_money</mat-icon>
             </div>
             <div class="card-body">
-                <h3 class="card-title"><strong>Pago de nóminas en línea</strong></h3>
-                <p class="card-text">Paga las remuneraciones directamente desde tu ERP Defontana!</p>
+                <h3 class="card-title cardTitle"><strong>Pago de nóminas en línea</strong></h3>
+                <p class="card-text cardBody">Paga las remuneraciones directamente desde tu ERP Defontana!</p>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="p-2 card h-100 text-center">
-            <div class="card-header">
+            <div>
                 <mat-icon class="dot">account_balance</mat-icon>
             </div>
             <div class="card-body">
-                <h3 class="card-title"><strong>Conciliación Bancaria vía API</strong></h3>
-                <p class="card-text">Revisa los datos de tus pagos, con los motivos y detalles de todas tus transferencias!</p>
+                <h3 class="card-title cardTitle"><strong>Conciliación Bancaria vía API</strong></h3>
+                <p class="card-text cardBody">Revisa los datos de tus pagos, con los motivos y detalles de todas tus transferencias!</p>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="p-2 card h-100 text-center">
-            <div class="card-header">
+            <div>
                 <mat-icon class="dot">settings_applications</mat-icon>
             </div>
             <div class="card-body">
-                <h5 class="card-title"></h5>
-                <p class="card-text"><strong>Y más soluciones que estarán próximamente en tu ERP Defontana...</strong></p>
+                <h5 class="card-title cardTitle"></h5>
+                <p class="card-text cardBody"><strong>Y más soluciones que estarán próximamente en tu ERP Defontana...</strong></p>
             </div>
         </div>
     </div>
@@ -65,8 +65,8 @@
 <div class="d-flex justify-content-between mb-3">
     <div class="p-2">
         <div class="card-body border-0">
-            <h3 class="card-title"><strong>¡Oferta exlusiva!</strong></h3>
-            <p class="card-text">Por ser nuestro cliente BCI, podrás obtener los siguientes productos adicionales:</p>
+            <h3 class="card-title cardTitle"><strong>¡Oferta exclusiva!</strong></h3>
+            <p class="card-text cardBody">Por ser nuestro cliente BCI, podrás obtener los siguientes productos adicionales:</p>
         </div>
     </div>
 </div>
